--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author":"Veeran",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -11,8 +12,4 @@
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	}
-}
-
-{
-	"author":"Veeran"
 }
